# master_projects

./: README.md
DeepLearning/: .gitignore  README.txt  main.ipynb  main01.ipynb  rust_model.pb  scab_model.pb
MLP_Mixer/: main.ipynb
MTH058/baseline/: .gitignore  common.py  debug.py  download_db.sh  requirements.txt  test.py  train.py
MTH058/capsnet/: capsule.py  common.py  train.py
MTH058/conv/: common.py  train.py
MTH058/emnist/: .gitignore  common.py  densenet.py  read_dataset.py  read_db.py  resnet.py  test.py  train.py
MTH058/fashion-mnist/: .gitignore  capsule.py  common.py  common.py.bck  download_db.sh  report.txt  train.py
MTH058/kaggle-dogs-cats/: .gitignore  README.md  common.py  predict.ipynb  read_data.py  read_dataset.py  read_db.py  report.txt  requirements.txt  split_data.py  test.py  train.py
MTH058/kaggle-dogs-cats/.ipynb_checkpoints/: predict-checkpoint.ipynb
MultimediaSystem/: .gitignore  attack_with_defending.py  attack_without_defending.py
Thesis/: CMakeLists.txt  Makefile  configure.sh  requirements.txt
Thesis/benchmark/: CMakeLists.txt
Thesis/include/example/: example.h
Thesis/include/graded_signature/: combine.h  group_key_gen.h  hash.h  join.h  param.h  sign.h  user_key_gen.h  utility.h  zkp.h
Thesis/src/: CMakeLists.txt
Thesis/src/example/: example.cpp  main.cpp
Thesis/src/graded_signature/: combine.cpp  group_key_gen.cpp  hash.cpp  join.cpp  param.cpp  sign.cpp  user_key_gen.cpp  utility.cpp  zkp.cpp
Thesis/test/: CMakeLists.txt
Thesis/test/example/: example.cpp
Thesis/test/graded_signature/: combine_test.cpp  hash_test.cpp  join_test.cpp  sign_test.cpp  utility_test.cpp  zkp_test.cpp
