# example
AUX_SOURCE_DIRECTORY("${CMAKE_SOURCE_DIR}/test/example" EXAMPLE)
ADD_EXECUTABLE(exampleTest ${EXAMPLE})
TARGET_LINK_LIBRARIES(exampleTest gtest ${CMAKE_THREAD_LIBS_INIT})

# graded signature
AUX_SOURCE_DIRECTORY("${CMAKE_SOURCE_DIR}/src/graded_signature" GS_SRC)
AUX_SOURCE_DIRECTORY("${CMAKE_SOURCE_DIR}/test/graded_signature" GS_TEST)
ADD_EXECUTABLE(gsTest ${GS_SRC} ${GS_TEST})
TARGET_LINK_LIBRARIES(gsTest gtest ${CMAKE_THREAD_LIBS_INIT} OpenSSL::Crypto)
